--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/SistemaInv
+spring.datasource.username=postgres
+spring.datasource.password=sebas123
+spring.jpa.show-sql=true
